@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-08T01:21:57Z",
+  "timestamp" : "2022-11-08T16:23:39Z",
   "count_outdated" : 643,
   "uniques_outdated" : 367,
-  "count" : 670,
+  "count" : 669,
   "uniques" : 380,
   "clones" : [
     {
       "timestamp": "2022-10-25T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
